--- a/index.html
+++ b/index.html
@@ -12,10 +12,127 @@
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+        body {
+            font-family: 'Inter', sans-serif;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        .bg-primary {
+            background: #E76F51;
+        }
+    </style>
 </head>
 
 <body>
+    <!-- Start here -->
 
+    <!-- Header -->
+    <header>
+        <div class="px-6 md:px-12 lg:px-24">
+
+            <!-- Navbar -->
+
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <a class="text-3xl font-bold">Go Bike</a>
+                </div>
+
+                <div class="navbar-end">
+                    <div class="navbar-center lg:flex">
+                        <ul class="menu menu-horizontal px-1">
+                            <li><a>Home</a></li>
+                            <li><a>Shop</a></li>
+                            <li><a>News</a></li>
+                            <li><a>Contact</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn bg-primary text-white">Button</a>
+                </div>
+            </div>
+
+
+            <div class="carousel w-full rounded-md h-full mt-8">
+
+
+                <div id="slide1" class="carousel-item bg-red-50 relative w-full border">
+
+                    <div class="flex justify-between items-center px-28 py-10">
+                        <div class="content flex-1 space-y-4">
+                            <h1 class="text-4xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p>Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <button class="btn text-white bg-primary">Parchese</button>
+                        </div>
+                        <div class="image flex-1">
+                            <img src="assets/slider/bike1.png" alt="Bike1">
+                        </div>
+                    </div>
+
+
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+
+                <div id="slide2" class="carousel-item bg-red-50 relative w-full border">
+                    <div class="flex justify-between items-center px-28 py-10">
+                        <div class="content flex-1 space-y-4">
+                            <h1 class="text-4xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p>Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <button class="btn text-white bg-primary">Parchese</button>
+                        </div>
+                        <div class="image flex-1">
+                            <img src="assets/slider/bike2.png" alt="Bike1">
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item bg-red-50 relative w-full border">
+                    <div class="flex justify-between items-center px-28 py-10">
+                        <div class="content flex-1 space-y-4">
+                            <h1 class="text-4xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p>Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <button class="btn text-white bg-primary">Parchese</button>
+                        </div>
+                        <div class="image flex-1">
+                            <img src="assets/slider/bike3.png" alt="Bike1">
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item bg-red-50 relative w-full border">
+                    <div class="flex justify-between items-center px-28 py-10">
+                        <div class="content flex-1 space-y-4">
+                            <h1 class="text-4xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p>Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <button class="btn text-white bg-primary">Parchese</button>
+                        </div>
+                        <div class="image flex-1">
+                            <img src="assets/slider/bike4.png" alt="Bike1">
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
