--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": '#da373d',
+                    }
+                }
+            }
+        }
+    </script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
         body {
             font-family: 'Inter', sans-serif;
             font-family: 'Poppins', sans-serif;
-        }
-
-        .bg-primary {
-            background: #E76F51;
         }
     </style>
 </head>
@@ -133,6 +140,24 @@
             </div>
         </div>
     </header>
+
+    <!-- Main -->
+    <main class="container mx-auto">
+        <!-- Bike showcase -->
+        <section class="my-20">
+            <div class="top-title text-center space-y-1">
+                <h1 class="text-6xl font-semibold">Fetured Bikes In This Year</h1>
+                <p class="text-primary">Best bike collection</p>
+                <span class="h-[3px] w-28 mx-auto bg-primary block"></span>
+            </div>
+
+            <div class="flex justify-around  items-center mt-20">
+                <img src="/assets/others/feature-bike.png" class="w-1/3" alt="">
+                <img src="/assets/others/extrabike.png" class="w-1/3" alt="">
+                <img src="/assets/others/feature-bike.png" class="w-1/3" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
